--- a/assets/css/run-buddy-style.css
+++ b/assets/css/run-buddy-style.css
@@ -41,7 +41,7 @@ header nav ul {
 }
 
 header nav ul li a{
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -57,6 +57,7 @@ section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 .hero-cta {
@@ -65,7 +66,7 @@ section {
   margin: 3.5%;
   color: #fff;
   font-size: 18px;
-  line-height: 1.3;
+  line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -123,7 +124,7 @@ section {
 }
 
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
@@ -291,10 +292,6 @@ section {
   font-size: 16px;
 }
 
-.contact-info iframe {
-}
-
-
 footer {
     display: flex;
     justify-content: space-between;
@@ -329,4 +326,16 @@ footer a {
 
 .flex-row {
   display: flex;
+}
+
+@media screen and (max-width: 980px) {
+  
+}
+
+@media screen and (max-width: 768px) {
+ 
+}
+
+@media screen and (max-width: 575px) {
+  
 }
